<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magic Game Tracker</string>
    <string name="version">version: </string>
    <string name="action_settings">Settings</string>
    <string name="bToDecks">Decks</string>
    <string name="bToNewDeck">Create New Deck</string>
    <string name="bToOpponentPage">Opponents</string>
    <string name="bToPlayerPage">Statistics</string>
    <string name="bToAbout">About</string>
    <string name="hint_Name">Name</string>
    <string name="hint_Theme">Theme</string>
    <string name="bCreate">Create</string>
    <string name="bCreateOpponent">Create Opponent</string>
    <string name="default_ListItem">This text is not correct!</string>
    <string name="dialog_DeleteQ">Create Opponent</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="win">Win</string>
    <string name="wins">Wins</string>
    <string name="loss">Loss</string>
    <string name="losses">Losses</string>
    <string name="winpc">Win %</string>
    <string name="error">Error!</string>
    <string name="commonWin">Common win</string>
    <string name="commonLoss">Common loss</string>
    <string name="commonPlay">Comon play</string>
    <string name="commonOpponent">Common opposition</string>
    <string name="bExportDecks">Export Decks</string>
    <string name="bExportGames">Export Games</string>
    <string name="deck">Deck</string>
    <string name="decks">Decks</string>
    <string name="game">Game</string>
    <string name="games">Games</string>
    <string name="exported">Exported</string>
    <string name="active">Active</string>
    <string name="inactive">Not active</string>
    <string name="all">All</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivated">Deactivated</string>
    <string name="or">Or</string>
    <string name="mark_q">Question</string>
    <string name="bAddGame">Register Game</string>
    <string name="bToGames">Played Games</string>
    <string name="bUpdateDeck">Register event</string>
    <string name="current">Current</string>
    <string name="total">Total</string>
    <string name="event">Event</string>
    <string name="register">Register</string>
    <string name="registerd">Registered</string>
    <string name="hintComment">Comment</string>
    <string name="defaultOpponent">Default Opponent</string>
    <string name="noName_title">A name must be declared</string>
    <string name="add">Add</string>
    <string name="parametersMissing">Parameters missing</string>
    <string name="alteration">Alteration</string>
    <string name="alterations">Alterations</string>
    <string name="details">Details</string>
    <string name="statistics">Statistics</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="result">Result</string>
    <string name="opponent">Opponent</string>
    <string name="colors">Colors</string>
    <string name="performanceRating">Performance Rating</string>
    <string name="thisword">This</string>
    <string name="cannotbe">Can not be</string>
    <string name="space"> </string>
    <string name="email">Email</string>
    <string name="developers">Developers</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="body">Text</string>
    <string name="format">Format</string>
    <string name="theme">Theme</string>
    <string name="winrate">Winrate</string>
    <string name="gamestatistics">Game statistics</string>
    <string name="colorsplayed">Colors played</string>
    <string name="importword">Import</string>
    <string name="export">Export</string>
    <string name="import_database">Import Database</string>
    <string name="export_database">Export Database</string>
    <string name="now">Now</string>
    <string name="gamesago">0 games</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="status">Status</string>
    <string name="opponentcolors">Opponent colors</string>
    <string name="winratehistory">Winrate history</string>
    <string name="timesfoundinalldeck">Times found in all decks</string>
    <string name="timesfoundinactivedecks">Times found in active decks</string>
    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
    <string name="plus5">+5</string>
    <string name="minus5">-5</string>
    <string name="changestitle">Recent changes</string>
    <string name="changes">Magic Game Tracker is in development as a web service. More info at Magirator.net</string>

    <!--Sentences-->
    <string name="importwarning">This action will delete your current database, are you sure you want to proceed?</string>

    <!--Ad units-->
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="deck_ad_unit_id">ca-app-pub-2907779770903388/1002038951</string>
    <string name="player_ad_unit_id">ca-app-pub-2907779770903388/8246104151</string>
    <string name="game_ad_unit_id">ca-app-pub-2907779770903388/2199570558</string>
    <string name="alteration_ad_unit_id">ca-app-pub-2907779770903388/3676303757</string>
    <string name="opponent_ad_unit_id">ca-app-pub-2907779770903388/6629770157</string>

</resources>
