<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RootLayout">

    <RelativeLayout
        style="@style/ContentHolder">

        <Button
            android:id="@+id/bToDecks"
            android:text="@string/bToDecks"
            android:layout_alignParentTop="true"
            style="@style/Button"/>

        <!--<Button
            android:id="@+id/bToNewDeck"
            android:text="@string/bToNewDeck"
            android:layout_below="@+id/bToDecks"
            style="@style/Button"/>-->

        <Button
            android:id="@+id/bToPlayerPage"
            android:text="@string/bToPlayerPage"
            android:layout_below="@+id/bToDecks"
            style="@style/Button"/>

        <Button
            android:id="@+id/bToOpponents"
            android:text="@string/bToOpponentPage"
            android:layout_below="@+id/bToPlayerPage"
            style="@style/Button"/>

        <TextView
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/changestitle"
            android:id="@+id/tvChangesTitle"
            android:layout_below="@+id/bToOpponents"
            style="@style/Text.Compact.Title"
            android:paddingTop="40dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:text="@string/changes"
            android:id="@+id/tvChanges"
            android:layout_below="@+id/tvChangesTitle"
            style="@style/Text.Compact.Title"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</RelativeLayout>
