<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RootLayout">

    <RelativeLayout
        style="@style/ContentHolder">

    <TextView
        android:id="@+id/tvTotalColors"
        android:layout_alignParentTop="true"
        android:text="@string/gamestatistics"
        style="@style/Text.Title" />

    <TableLayout
        android:id="@+id/tbPlayedGamesStats"
        android:layout_below="@+id/tvTotalColors"
        style="@style/Table">

        <TableRow
            android:id="@+id/FirstRow"
            style="@style/TableRow">

            <TextView
                android:id="@+id/tvWinTitle"
                android:text="@string/wins"
                style="@style/Text.Compact.Title"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvLoseTitle"
                android:text="@string/losses"
                style="@style/Text.Compact.Title"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvStatWinTitle"
                android:text="@string/winpc"
                style="@style/Text.Compact.Title"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/SecondRow"
            style="@style/TableRow" >

            <TextView
                android:id="@+id/tvWin"
                android:text="@string/error"
                style="@style/Text.Compact"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvLose"
                android:text="@string/error"
                style="@style/Text.Compact"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvStatWin"
                android:text="@string/error"
                style="@style/Text.Compact"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvActiveColors"
        android:layout_below="@+id/tbPlayedGamesStats"
        android:text="@string/colorsplayed"
        style="@style/Text.Title" />

    <TableLayout
        android:id="@+id/tbPlayedGamesColors"
        android:layout_below="@+id/tvActiveColors"
        style="@style/Table">

        <TableRow
            android:id="@+id/ThirdRow"
            style="@style/TableRow">

            <TextView
                android:id="@+id/tvCommonWinTitle"
                android:text="@string/commonWin"
                style="@style/Text.Compact.Title"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvCommonLoseTitle"
                android:text="@string/commonLoss"
                style="@style/Text.Compact.Title"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/FourthRow"
            style="@style/TableRow">

            <ImageView
                android:id="@+id/imgCommonWin"
                style="@style/ManaSymbol.Indicator"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imgCommonLoss"
                style="@style/ManaSymbol.Indicator"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/FifthRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/tvCommonPlayTitle"
                android:text="@string/commonPlay"
                style="@style/Text.Compact.Title"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvCommonOpponentTitle"
                android:text="@string/commonOpponent"
                style="@style/Text.Compact.Title"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/SixthRow"
            style="@style/TableRow" >

            <ImageView
                android:id="@+id/imgCommonPlay"
                style="@style/ManaSymbol.Indicator"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imgCommonOpponent"
                style="@style/ManaSymbol.Indicator"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    </RelativeLayout>
</RelativeLayout>